--- a/index.html
+++ b/index.html
@@ -5,37 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的简历</title>
     <link rel="stylesheet" href="style.css">
-    <!-- 正确引入字体图标库 -->
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- 导航栏 -->
     <nav class="nav-bar">
         <div class="logo">我的简历</div>
         <ul class="nav-menu">
-            <li><a href=" "><i class="fa-solid fa-user"></i> 个人信息</a ></li>
+            <li><a href="#info"><i class="fa-solid fa-user"></i> 个人信息</a ></li>
             <li><a href="#award"><i class="fa-solid fa-trophy"></i> 获奖情况</a ></li>
             <li><a href="#intern"><i class="fa-solid fa-briefcase"></i> 实习经历</a ></li>
         </ul>
     </nav>
 
-    <!-- 个人信息模块 -->
     <section id="info" class="section">
         <h2>个人信息</h2>
         <div class="info-card">
-            <!-- 修正图片标签语法，确保图片文件在同级目录 -->
-            <div class="avatar">< img src="avatar.jpg" alt="个人头像"></div>
+            <div class="avatar"><img src="avatar.jpg" alt="个人头像"></div>
             <div class="info-content">
-                <p><strong>姓名</strong>：张三</p >
-                <p><strong>专业</strong>：海洋技术（大连海洋大学）</p >
+                <p><strong>姓名</strong>：高恩骏</p >
+                <p><strong>专业</strong>：大数据与数据科学（大连海洋大学）</p >
                 <p><strong>学历</strong>：本科</p >
-                <p><strong>联系方式</strong>：13800138000 | zhangsan@example.com</p >
+                <p><strong>联系方式</strong>：130****7601</p >
                 <p><strong>个人简介</strong>：熟悉前端开发技术，专注海洋领域数字化应用，具备海洋牧场相关项目实践经验。</p >
             </div>
         </div>
     </section>
 
-    <!-- 获奖情况模块 -->
     <section id="award" class="section">
         <h2>获奖情况</h2>
         <div class="award-list">
@@ -50,7 +45,6 @@
         </div>
     </section>
 
-    <!-- 实习经历模块 -->
     <section id="intern" class="section">
         <h2>实习经历</h2>
         <div class="intern-list">
@@ -62,7 +56,6 @@
         </div>
     </section>
 
-    <!-- 页脚 -->
     <footer>
         <p>© 2025 个人简历网站 | 大连海洋大学前端作业</p >
     </footer>
@@ -70,3 +63,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
